# blogger-scrapper

./: .gitignore  README.md  pyproject.toml  setup.cfg
blogger_scrapper/: __init__.py  blog.py  export.py  mapping.py  scrapper.py
output/: .gitignore
