[metadata]
name = blogger_scrapper-sudosuwinter
version = 0.0.1
author = Dimitar Ivanov
author_email = dimitarxivanov@gmail.com
description = Python library for scrapping Blogger sites via Atom/RSS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sudosuwinter/blogger-scrapper
project_urls =
    Bug Tracker = https://github.com/sudosuwinter/blogger-scrapper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = blogger_scrapper
packages = find:
python_requires = >=3.9

[options.packages.find]
where = blogger_scrapper
